src/objects/CntrbnMdl_PTO__c.object
<CustomObject>
    <description>This object allows you to store the data for PTO of each TSE on monthly basis</description>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_days_off__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of days off</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CntrbnMdl_PTO</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contribution Model PTO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Month__c</columns>
        <columns>Number_of_days_off__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTO-{0000000}</displayFormat>
        <label>PTO_Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contribution Model PTO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>